added blueprint, added overlimit class when go over limit

--- a/addon/templates/components/character-counter.hbs
+++ b/addon/templates/components/character-counter.hbs
@@ -1,4 +1,4 @@
-<div class="counter">
+<div class="counter {{if isOverLimit 'over-limit'}}">
   <span class="hide" style="display:none">{{inputClass}}</span>
   {{characterCount}}/{{characterLimit}}
 </div>
