--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,4 @@
 <h2 id="title">Welcome to Ember</h2>
-
+{{input value=10 name="subject" class="communication-editor__subject-bar__input" placeholder="(enter subject)" maxlength='150'}}
+{{character-counter characterCount='50' characterLimit='50' inputClass='communication-editor__subject-bar__input'}}
 {{outlet}}
